--- a/steam.yaml
+++ b/steam.yaml
@@ -1,23 +1,43 @@
 payload:
-  - DOMAIN,steamcommunity.com,
-  - DOMAIN,steamgames.com,
-  - DOMAIN,steamusercontent.com,
-  - DOMAIN,steamstatic.com,
-  - DOMAIN,valve.com,
-  - DOMAIN,steampowered.com,
-  - DOMAIN,steamcontent.com,
-  - DOMAIN,akamaihd.net,
-  - DOMAIN,s.team,
-  - DOMAIN,steam-chat.com,
-  - DOMAIN,steampowered.com.8686c.com,
-  - DOMAIN,steamstatic.com.8686c.com,
-  - DOMAIN,steamserver.net,
-  - DOMAIN,steambroadcast.akamaized.net,
-  - DOMAIN,steamcontent.com.c.footprint.net,
-  - DOMAIN,steam-api.com,
-  - DOMAIN,steamdeck.com,
-  - DOMAIN,underlords.com,
-  - DOMAIN,valvesoftware.com,
+  - DOMAIN-SUFFIX,steamcommunity.com,
+  - DOMAIN-SUFFIX,steamgames.com,
+  - DOMAIN-SUFFIX,steamusercontent.com,
+  - DOMAIN-SUFFIX,steamstatic.com,
+  - DOMAIN-SUFFIX,valve.com,
+  - DOMAIN-SUFFIX,steampowered.com,
+  - DOMAIN-SUFFIX,steamcontent.com,
+  - DOMAIN-SUFFIX,akamaihd.net,
+  - DOMAIN-SUFFIX,s.team,
+  - DOMAIN-SUFFIX,steam-chat.com,
+  - DOMAIN-SUFFIX,steampowered.com.8686c.com,
+  - DOMAIN-SUFFIX,steamstatic.com.8686c.com,
+  - DOMAIN-SUFFIX,steamserver.net,
+  - DOMAIN-SUFFIX,steambroadcast.akamaized.net,
+  - DOMAIN-SUFFIX,steamcontent.com.c.footprint.net,
+  - DOMAIN-SUFFIX,steam-api.com,
+  - DOMAIN-SUFFIX,steamdeck.com,
+  - DOMAIN-SUFFIX,underlords.com,
+  - DOMAIN-SUFFIX,valvesoftware.com,
+  - DOMAIN-SUFFIX,community.akamai.steamstatic.com,
+  - DOMAIN-SUFFIX,steamstore-a.akamaihd.net,
+  - DOMAIN-SUFFIX,steam-chat.com,
+  - DOMAIN-SUFFIX,store.steampowered.com,
+  - DOMAIN-SUFFIX,steamcommunity.com,
+  - DOMAIN-SUFFIX,steamcommunity-a.akamaihd.net,
+  - DOMAIN-SUFFIX,api.steampowered.com,
+  - DOMAIN-SUFFIX,community.akamai.steamstatic.com,
+  - DOMAIN-SUFFIX,cdn.akamai.steamstatic.com,
+  - DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,
+  - DOMAIN-SUFFIX,steamstore-a.akamaihd.net,
+  - DOMAIN-SUFFIX,store.steampowered.com,
+  - DOMAIN-SUFFIX,community.cloudflare.steamstatic.com,
+  - DOMAIN-SUFFIX,store.cloudflare.steamstatic.com,
+  - DOMAIN-SUFFIX,cdn.cloudflare.steamstatic.com,
+  - DOMAIN-SUFFIX,avatars.cloudflare.steamstatic.com,
+  - DOMAIN-SUFFIX,steamuserimages-a.akamaihd.net,
+  - DOMAIN-SUFFIX,store.steampowered.com,
+  - DOMAIN-SUFFIX,steamuserimages-a.akamaihd.net,
+  - DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,
   - IP-CIDR,103.10.124.0/24,
   - IP-CIDR,103.10.125.0/24,
   - IP-CIDR,103.28.54.0/24,
