--- a/iran.yaml
+++ b/iran.yaml
@@ -1,4 +1,5 @@
 payload:
+  - DOMAIN-SUFFIX,ir,
   - DOMAIN-KEYWORD,freeserver.top,
   - DOMAIN-KEYWORD,sermovie.xyz,
   - DOMAIN-KEYWORD,mobo-dl-filter-nakon.xyz,
