--- a/blocked-sites.yml
+++ b/blocked-sites.yml
@@ -339,6 +339,7 @@ payload:
   - DOMAIN-SUFFIX,voanews.com
   - DOMAIN-SUFFIX,gooya.com
 
+  - DOMAIN,sub.bonds.id
   - DOMAIN-SUFFIX,workers.dev
   - DOMAIN-SUFFIX,v2rayse.com
   - DOMAIN-SUFFIX,cff.pw
