--- a/steam.yaml
+++ b/steam.yaml
@@ -39,6 +39,30 @@ payload:
   - DOMAIN-SUFFIX,store.steampowered.com,
   - DOMAIN-SUFFIX,steamuserimages-a.akamaihd.net,
   - DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,
+  - DOMAIN-SUFFIX,dl.steam.clngaa.com,
+  - DOMAIN-SUFFIX,dl.steam.ksyna.com,
+  - DOMAIN-SUFFIX,edge.steam-dns.top.comcast.net,
+  - DOMAIN-SUFFIX,playartifact.com,
+  - DOMAIN-SUFFIX,st.dl.bscstorage.net,
+  - DOMAIN-SUFFIX,st.dl.eccdnx.com,
+  - DOMAIN-SUFFIX,st.dl.pinyuncloud.com,
+  - DOMAIN-SUFFIX,steam.apac.qtlglb.com,
+  - DOMAIN-SUFFIX,steam.cdn.on.net,
+  - DOMAIN-SUFFIX,steam.cdn.orcon.net.nz,
+  - DOMAIN-SUFFIX,steam.cdn.slingshot.co.nz,
+  - DOMAIN-SUFFIX,steam.cdn.webra.ru,
+  - DOMAIN-SUFFIX,steam.eca.qtlglb.com,
+  - DOMAIN-SUFFIX,steam.naeu.qtlglb.com,
+  - DOMAIN-SUFFIX,steam.ru.qtlglb.com,
+  - DOMAIN-SUFFIX,steampipe.steamcontent.tnkjmec.com,
+  - DOMAIN-SUFFIX,wmsjsteam.com,
+  - DOMAIN,f3b7q2p3.ssl.hwcdn.net,
+  - DOMAIN,steammobile.akamaized.net,
+  - DOMAIN,steampipe-kr.akamaized.net,
+  - DOMAIN,steampipe-partner.akamaized.net,
+  - DOMAIN,steamusercontent-a.akamaihd.net,
+  - DOMAIN,steamvideo-a.akamaihd.net,
+  - DOMAIN,xz.pphimalayanrt.com,
   - IP-CIDR,103.10.124.0/24,
   - IP-CIDR,103.10.125.0/24,
   - IP-CIDR,103.28.54.0/24,
@@ -74,7 +98,7 @@ payload:
   - IP-CIDR,162.254.198.0/24,
   - IP-CIDR,162.254.199.0/24,
   - IP-CIDR,185.25.182.0/24,
-  - IP-CIDR,185.25.183.0/24,	 
+  - IP-CIDR,185.25.183.0/24,
   - IP-CIDR,190.217.33.0/24,
   - IP-CIDR,192.69.96.0/22,
   - IP-CIDR,205.196.6.0/24,
@@ -82,7 +106,7 @@ payload:
   - IP-CIDR,208.64.201.0/24,
   - IP-CIDR,208.64.202.0/24,
   - IP-CIDR,208.64.203.0/24,
-  - IP-CIDR,208.78.164.0/22,	   
+  - IP-CIDR,208.78.164.0/22,
   - IP-CIDR6,2404:3fc0::/48,
   - IP-CIDR6,2404:3fc0:1::/48,
   - IP-CIDR6,2404:3fc0:2::/48,
@@ -112,5 +136,5 @@ payload:
   - IP-CIDR6,2a01:bc80:8::/48,
   - IP-CIDR6,2a01:bc80:9::/48,
   - IP-CIDR6,2a01:bc80:a::/48,
-  - IP-CIDR6,2a01:bc80:b::/48,	 
+  - IP-CIDR6,2a01:bc80:b::/48,
   - IP-CIDR6,2a01:bc80:c::/48,
