--- a/add.yaml
+++ b/add.yaml
@@ -43060,3 +43060,125 @@ payload:
   - DOMAIN-SUFFIX,zz.bdstatic.com,
   - DOMAIN-SUFFIX,zzaoea.costacrociere.it,
   - DOMAIN-SUFFIX,zzsqqx.shopjapan.co.jp,
+
+
+
+  - DOMAIN-SUFFIX,adtago.s3.amazonaws.com,
+  - DOMAIN-SUFFIX,advice-ads.s3.amazonaws.com,
+  - DOMAIN-SUFFIX,pagead2.googlesyndication.com,
+  - DOMAIN-SUFFIX,adservice.google.com,
+  - DOMAIN-SUFFIX,stats.g.doubleclick.net,
+  - DOMAIN-SUFFIX,ad.doubleclick.net,
+  - DOMAIN-SUFFIX,static.doubleclick.net,
+  - DOMAIN-SUFFIX,m.doubleclick.net,
+  - DOMAIN-SUFFIX,mediavisor.doubleclick.net,
+  - DOMAIN-SUFFIX,ads30.adcolony.com,
+  - DOMAIN-SUFFIX,adc3-launch.adcolony.com,
+  - DOMAIN-SUFFIX,events3alt.adcolony.com,
+  - DOMAIN-SUFFIX,wd.adcolony.com,
+  - DOMAIN-SUFFIX,static.media.net,
+  - DOMAIN-SUFFIX,media.net,
+  - DOMAIN-SUFFIX,adservetx.media.net,
+  - DOMAIN-SUFFIX,static.ads-twitter.com,
+  - DOMAIN-SUFFIX,ads.linkedin.com,
+  - DOMAIN-SUFFIX,ads.pinterest.com,
+  - DOMAIN-SUFFIX,ads.youtube.com,
+  - DOMAIN-SUFFIX,ads-api.tiktok.com,
+  - DOMAIN-SUFFIX,ads-sg.tiktok.com,
+  - DOMAIN-SUFFIX,ads.tiktok.com,
+  - DOMAIN-SUFFIX,partnerads.ysm.yahoo.com,
+  - DOMAIN-SUFFIX,adtech.yahooinc.com,
+  - DOMAIN-SUFFIX,adfox.yandex.ru,
+  - DOMAIN-SUFFIX,api.ad.xiaomi.com,
+  - DOMAIN-SUFFIX,sdkconfig.ad.xiaomi.com,
+  - DOMAIN-SUFFIX,sdkconfig.ad.intl.xiaomi.com,
+  - DOMAIN-SUFFIX,globalapi.ad.xiaomi.com,
+  - DOMAIN-SUFFIX,adx.ads.oppomobile.com,
+  - DOMAIN-SUFFIX,analyticsengine.s3.amazonaws.com,
+  - DOMAIN-SUFFIX,advertising-api-eu.amazon.com,
+  - DOMAIN-SUFFIX,analytics.s3.amazonaws.com,
+  - DOMAIN-SUFFIX,app-measurement.com,
+  - DOMAIN-SUFFIX,google-analytics.com,
+  - DOMAIN-SUFFIX,ssl.google-analytics.com,
+  - DOMAIN-SUFFIX,click.googleanalytics.com,
+  - DOMAIN-SUFFIX,cdn.mouseflow.com,
+  - DOMAIN-SUFFIX,afs.googlesyndication.com,
+  - DOMAIN-SUFFIX,analytics.google.com,
+  - DOMAIN-SUFFIX,pagead2.googleadservices.com,
+  - DOMAIN-SUFFIX,surveys.hotjar.com,
+  - DOMAIN-SUFFIX,o2.mouseflow.com,
+  - DOMAIN-SUFFIX,api.mouseflow.com,
+  - DOMAIN-SUFFIX,careers.hotjar.com,
+  - DOMAIN-SUFFIX,events.hotjar.io,
+  - DOMAIN-SUFFIX,adm.hotjar.com,
+  - DOMAIN-SUFFIX,identify.hotjar.com,
+  - DOMAIN-SUFFIX,mouseflow.com,
+  - DOMAIN-SUFFIX,freshmarketer.com,
+  - DOMAIN-SUFFIX,claritybt.freshmarketer.com,
+  - DOMAIN-SUFFIX,cdn-test.mouseflow.com,
+  - DOMAIN-SUFFIX,luckyorange.com,
+  - DOMAIN-SUFFIX,realtime.luckyorange.com,
+  - DOMAIN-SUFFIX,cdn.luckyorange.com,
+  - DOMAIN-SUFFIX,w1.luckyorange.com,
+  - DOMAIN-SUFFIX,api.luckyorange.com,
+  - DOMAIN-SUFFIX,fwtracks.freshmarketer.com,
+  - DOMAIN-SUFFIX,upload.luckyorange.net,
+  - DOMAIN-SUFFIX,cs.luckyorange.net,
+  - DOMAIN-SUFFIX,settings.luckyorange.net,
+  - DOMAIN-SUFFIX,notify.bugsnag.com,
+  - DOMAIN-SUFFIX,gtm.mouseflow.com,
+  - DOMAIN-SUFFIX,sessions.bugsnag.com,
+  - DOMAIN-SUFFIX,api.bugsnag.com,
+  - DOMAIN-SUFFIX,app.bugsnag.com,
+  - DOMAIN-SUFFIX,tools.mouseflow.com,
+  - DOMAIN-SUFFIX,browser.sentry-cdn.com,
+  - DOMAIN-SUFFIX,app.getsentry.com,
+  - DOMAIN-SUFFIX,trk.pinterest.com,
+  - DOMAIN-SUFFIX,an.facebook.com,
+  - DOMAIN-SUFFIX,business-api.tiktok.com,
+  - DOMAIN-SUFFIX,log.byteoversea.com,
+  - DOMAIN-SUFFIX,udc.yahoo.com,
+  - DOMAIN-SUFFIX,udcm.yahoo.com,
+  - DOMAIN-SUFFIX,analytics.pinterest.com,
+  - DOMAIN-SUFFIX,analytics.query.yahoo.com,
+  - DOMAIN-SUFFIX,adfstat.yandex.ru,
+  - DOMAIN-SUFFIX,config.unityads.unity3d.com,
+  - DOMAIN-SUFFIX,auction.unityads.unity3d.com,
+  - DOMAIN-SUFFIX,webview.unityads.unity3d.com,
+  - DOMAIN-SUFFIX,adserver.unityads.unity3d.com,
+  - DOMAIN-SUFFIX,appmetrica.yandex.ru,
+  - DOMAIN-SUFFIX,iot-logser.realme.com,
+  - DOMAIN-SUFFIX,iot-eu-logser.realme.com,
+  - DOMAIN-SUFFIX,metrika.yandex.ru,
+  - DOMAIN-SUFFIX,advertising.yandex.ru,
+  - DOMAIN-SUFFIX,offerwall.yandex.net,
+  - DOMAIN-SUFFIX,gemini.yahoo.com,
+  - DOMAIN-SUFFIX,grs.hicloud.com,
+  - DOMAIN-SUFFIX,metrics.data.hicloud.com,
+  - DOMAIN-SUFFIX,data.mistat.xiaomi.com,
+  - DOMAIN-SUFFIX,tracking.rus.miui.com,
+  - DOMAIN-SUFFIX,metrics2.data.hicloud.com,
+  - DOMAIN-SUFFIX,open.oneplus.net,
+  - DOMAIN-SUFFIX,widgets.pinterest.com,
+  - DOMAIN-SUFFIX,ck.ads.oppomobile.com,
+  - DOMAIN-SUFFIX,data.ads.oppomobile.com,
+  - DOMAIN-SUFFIX,advertising.apple.com,
+  - DOMAIN-SUFFIX,iadsdk.apple.com,
+  - DOMAIN-SUFFIX,samsung-com.112.2o7.net,
+  - DOMAIN-SUFFIX,log.fc.yahoo.com,
+  - DOMAIN-SUFFIX,api-adservices.apple.com,
+  - DOMAIN-SUFFIX,tr.iadsdk.apple.com,
+  - DOMAIN-SUFFIX,weather-analytics-events.apple.com,
+  - DOMAIN-SUFFIX,books-analytics-events.apple.com,
+  - DOMAIN-SUFFIX,notes-analytics-events.apple.com,
+  - DOMAIN-SUFFIX,advertising.yahoo.com,
+  - DOMAIN-SUFFIX,bdapi-ads.realmemobile.com,
+  - DOMAIN-SUFFIX,script.hotjar.com,
+  - DOMAIN-SUFFIX,insights.hotjar.com,
+  - DOMAIN-SUFFIX,smetrics.samsung.com,
+  - DOMAIN-SUFFIX,bdapi-in-ads.realmemobile.com,
+  - DOMAIN-SUFFIX,data.mistat.india.xiaomi.com,
+  - DOMAIN-SUFFIX,data.mistat.rus.xiaomi.com,
+  - DOMAIN-SUFFIX,adsfs.oppomobile.com,
+  - DOMAIN-SUFFIX,partner.ads.js,
+  - DOMAIN-SUFFIX,Doubleclick.net,
