--- a/Global tracking.yaml
+++ b/Global tracking.yaml
@@ -593,3 +593,4 @@ payload:
   - DOMAIN-SUFFIX,go.10086.cn,
   - DOMAIN-SUFFIX,hivedata.cc,
   - DOMAIN-SUFFIX,navi.gd.chinamobile.com,
+  - DOMAIN-SUFFIX,app-measurement.com,
