--- a/censor.yaml
+++ b/censor.yaml
@@ -1,85 +1,114 @@
 payload:
-  - DOMAIN-SUFFIX,filmr.ir,
-  - DOMAIN-SUFFIX,doostihaa.com,
-  - DOMAIN-SUFFIX,uptvs.com,
-  - DOMAIN-SUFFIX,netpaak.com,
-  - DOMAIN-SUFFIX,hexdownload.co,
-  - DOMAIN-SUFFIX,filimserial.ir,
-  - DOMAIN-SUFFIX,gapfilm.ir,
-  - DOMAIN-SUFFIX,filimo.com,
-  - DOMAIN-SUFFIX,cooldl.net,
-  - DOMAIN-SUFFIX,naabmovie.ir,
-  - DOMAIN-SUFFIX,upera.tv,
-  - DOMAIN-SUFFIX,upera.shop,
-  - DOMAIN-SUFFIX,namava.ir,
-  - DOMAIN-SUFFIX,sorenmovie.ir,
-  - DOMAIN-SUFFIX,pishgammovie.ir,
-  - DOMAIN-SUFFIX,marzfun.com,
-  - DOMAIN-SUFFIX,par30media.com,
-  - DOMAIN-SUFFIX,sansorha.ir,
-  - DOMAIN-SUFFIX,karanmovie.org,
-  - DOMAIN-SUFFIX,film2irani.ir,
-  - DOMAIN-SUFFIX,cinemayek.com,
-  - DOMAIN-SUFFIX,ponoco.ir,
-  - DOMAIN-SUFFIX,roozdl1.com,
-  - DOMAIN-SUFFIX,gharbtv.com,
-  - DOMAIN-SUFFIX,film2serial.ir,
-  - DOMAIN-SUFFIX,irantv.me,
-  - DOMAIN-SUFFIX,hetfilm.com,
-  - DOMAIN-SUFFIX,filmin.info,
-  - DOMAIN-SUFFIX,emimovie.com,
-  - DOMAIN-SUFFIX,hivamovie.com,
-  - DOMAIN-SUFFIX,ir-dl.com,
-  - DOMAIN-SUFFIX,nama.tv,
-  - DOMAIN-SUFFIX,far30dl.ir,
-  - DOMAIN-SUFFIX,hamtamovie.im,
-  - DOMAIN-SUFFIX,donyamovie.ir,
-  - DOMAIN-SUFFIX,tikfilm.co,
-  - DOMAIN-SUFFIX,fastmovie.ir,
-  - DOMAIN-SUFFIX,vipofilm.com,
-  - DOMAIN-SUFFIX,bossfilm.ir,
-  - DOMAIN-SUFFIX,movienama.com,
-  - DOMAIN-SUFFIX,film2movie.asia,
-  - DOMAIN-SUFFIX,serialfilm.ir,
-  - DOMAIN-SUFFIX,yoozdl.top,
-  - DOMAIN-SUFFIX,skymovies.ir,
-  - DOMAIN-SUFFIX,filmino.me,
-  - DOMAIN-SUFFIX,filmeno.net,
-  - DOMAIN-SUFFIX,tizmovie.ir,
-  - DOMAIN-SUFFIX,dlpersian.ir,
-  - DOMAIN-SUFFIX,montmovie.co,
-  - DOMAIN-SUFFIX,hamrahmoviez.ir,
-  - DOMAIN-SUFFIX,plus.telewebion.com,
-  - DOMAIN-SUFFIX,filmnet.ir,
-  - DOMAIN-SUFFIX,funofilm.ir,
-  - DOMAIN-SUFFIX,wilm.ir,
-  - DOMAIN-SUFFIX,upmedia.movie,
-  - DOMAIN-SUFFIX,modernfilm.ir,
-  - DOMAIN-SUFFIX,movineh.com,
-  - DOMAIN-SUFFIX,niikidaily.info,
-  - DOMAIN-SUFFIX,dlrozaneh.ir,
-  - DOMAIN-SUFFIX,farsifilm.ir,
-  - DOMAIN-SUFFIX,movielandz.com,
-  - DOMAIN-SUFFIX,mer30download.com,
-  - DOMAIN-SUFFIX,filmsky.ir,
-  - DOMAIN-SUFFIX,nilz.ir,
-  - DOMAIN-SUFFIX,lovinfilm.ir,
-  - DOMAIN-SUFFIX,centerdl.ir,
-  - DOMAIN-SUFFIX,fardisfilm.ir,
-  - DOMAIN-SUFFIX,tvrooz.com,
-  - DOMAIN-SUFFIX,bi3-seda.ir,
-  - DOMAIN-SUFFIX,disfilm.ir,
-  - DOMAIN-SUFFIX,myavanet.ir,
-  - DOMAIN-SUFFIX,jaheshmovie.ir,
-  - DOMAIN-SUFFIX,farafilm.net,
-  - DOMAIN-SUFFIX,parsafilm.com,
-  - DOMAIN-SUFFIX,zinofilm.ir,
-  - DOMAIN-SUFFIX,glp.ir,
-  - DOMAIN-SUFFIX,hastidl.ir,
-  - DOMAIN-SUFFIX,filimiano.com,
-  - DOMAIN-SUFFIX,filmbaz.co,
-  - DOMAIN-SUFFIX,filmekade.com,
+  - DOMAIN-SUFFIX,24movie.net,
   - DOMAIN-SUFFIX,5download.ir,
+  - DOMAIN-SUFFIX,arnr.ir,
+  - DOMAIN-SUFFIX,baniwak.com,
+  - DOMAIN-SUFFIX,bi3-seda.ir,
+  - DOMAIN-SUFFIX,bossfilm.ir,
+  - DOMAIN-SUFFIX,bunnysub.com,
+  - DOMAIN-SUFFIX,centerdl.ir,
+  - DOMAIN-SUFFIX,chchek.com,
+  - DOMAIN-SUFFIX,cinemayek.com,
+  - DOMAIN-SUFFIX,coolaks.com,
+  - DOMAIN-SUFFIX,cooldl.net,
+  - DOMAIN-SUFFIX,disfilm.ir,
+  - DOMAIN-SUFFIX,dlpersian.ir,
+  - DOMAIN-SUFFIX,dlrozaneh.ir,
+  - DOMAIN-SUFFIX,donyamovie.ir,
+  - DOMAIN-SUFFIX,doostihaa.com,
+  - DOMAIN-SUFFIX,emimovie.com,
+  - DOMAIN-SUFFIX,far30dl.ir,
+  - DOMAIN-SUFFIX,farafilm.net,
+  - DOMAIN-SUFFIX,fardisfilm.ir,
+  - DOMAIN-SUFFIX,farsifilm.ir,
+  - DOMAIN-SUFFIX,fastmovie.ir,
+  - DOMAIN-SUFFIX,filimiano.com,
+  - DOMAIN-SUFFIX,filimo.com,
+  - DOMAIN-SUFFIX,filimserial.ir,
+  - DOMAIN-SUFFIX,film2irani.ir,
+  - DOMAIN-SUFFIX,film2movie.asia,
+  - DOMAIN-SUFFIX,film2serial.ir,
+  - DOMAIN-SUFFIX,filmbaz.co,
+  - DOMAIN-SUFFIX,filmcase.ir,
+  - DOMAIN-SUFFIX,filmekade.com,
+  - DOMAIN-SUFFIX,filmeno.net,
+  - DOMAIN-SUFFIX,filmin.info,
+  - DOMAIN-SUFFIX,filmino.me,
+  - DOMAIN-SUFFIX,filmnet.ir,
+  - DOMAIN-SUFFIX,filmparsi.ir,
+  - DOMAIN-SUFFIX,filmr.ir,
+  - DOMAIN-SUFFIX,filmsara.info,
+  - DOMAIN-SUFFIX,filmsky.ir,
+  - DOMAIN-SUFFIX,funofilm.ir,
+  - DOMAIN-SUFFIX,gameten.ir,
+  - DOMAIN-SUFFIX,gapfilm.ir,
+  - DOMAIN-SUFFIX,gharbtv.com,
+  - DOMAIN-SUFFIX,glp.ir,
+  - DOMAIN-SUFFIX,hamahang.net,
+  - DOMAIN-SUFFIX,hamrahmoviez.ir,
+  - DOMAIN-SUFFIX,hamtamovie.im,
+  - DOMAIN-SUFFIX,hastidl.ir,
+  - DOMAIN-SUFFIX,hetfilm.com,
+  - DOMAIN-SUFFIX,hexdownload.co,
+  - DOMAIN-SUFFIX,hivamovie.com,
+  - DOMAIN-SUFFIX,icinemaa.com,
+  - DOMAIN-SUFFIX,ir-dl.com,
+  - DOMAIN-SUFFIX,irantv.me,
+  - DOMAIN-SUFFIX,jaheshmovie.ir,
+  - DOMAIN-SUFFIX,karanmovie.org,
+  - DOMAIN-SUFFIX,lovinfilm.ir,
+  - DOMAIN-SUFFIX,marzfun.com,
+  - DOMAIN-SUFFIX,melofilm.ir,
+  - DOMAIN-SUFFIX,mer30download.com,
+  - DOMAIN-SUFFIX,mimovie.ir,
+  - DOMAIN-SUFFIX,modernfilm.ir,
+  - DOMAIN-SUFFIX,montmovie.co,
+  - DOMAIN-SUFFIX,movie.af,
+  - DOMAIN-SUFFIX,movielandz.com,
+  - DOMAIN-SUFFIX,movienama.com,
+  - DOMAIN-SUFFIX,moviezone.ir,
+  - DOMAIN-SUFFIX,movineh.com,
+  - DOMAIN-SUFFIX,myavanet.ir,
+  - DOMAIN-SUFFIX,naabmovie.ir,
+  - DOMAIN-SUFFIX,nama.tv,
+  - DOMAIN-SUFFIX,namava.ir,
+  - DOMAIN-SUFFIX,netpaak.com,
+  - DOMAIN-SUFFIX,netpaak.ir,
+  - DOMAIN-SUFFIX,nex1music.ir,
+  - DOMAIN-SUFFIX,ni3movie.com,
+  - DOMAIN-SUFFIX,niikidaily.info,
+  - DOMAIN-SUFFIX,nilz.ir,
+  - DOMAIN-SUFFIX,par30media.com,
+  - DOMAIN-SUFFIX,parsafilm.com,
+  - DOMAIN-SUFFIX,parsmovies.net,
+  - DOMAIN-SUFFIX,pelano.net,
+  - DOMAIN-SUFFIX,pishgammovie.ir,
+  - DOMAIN-SUFFIX,plus.telewebion.com,
+  - DOMAIN-SUFFIX,ponoco.ir,
+  - DOMAIN-SUFFIX,raycamovie.com,
+  - DOMAIN-SUFFIX,rofaghayekhoob.com,
+  - DOMAIN-SUFFIX,roozdl1.com.atlaq.com,
+  - DOMAIN-SUFFIX,sansorha.ir,
+  - DOMAIN-SUFFIX,serialfilm.ir,
+  - DOMAIN-SUFFIX,sidemovie.ir,
+  - DOMAIN-SUFFIX,skymovies.ir,
+  - DOMAIN-SUFFIX,sorenmovie.ir,
+  - DOMAIN-SUFFIX,tafrihicenter.ir,
+  - DOMAIN-SUFFIX,telvideo.ir,
+  - DOMAIN-SUFFIX,tikfilm.co,
+  - DOMAIN-SUFFIX,tizmovie.ir,
+  - DOMAIN-SUFFIX,tvrooz.com,
+  - DOMAIN-SUFFIX,upera.shop,
+  - DOMAIN-SUFFIX,upera.tv,
+  - DOMAIN-SUFFIX,upmedia.movie,
+  - DOMAIN-SUFFIX,uptvs.com,
+  - DOMAIN-SUFFIX,vipofilm.com,
+  - DOMAIN-SUFFIX,wilm.ir,
+  - DOMAIN-SUFFIX,yoozdl.top,
+  - DOMAIN-SUFFIX,zardfilm.in,
+  - DOMAIN-SUFFIX,zflix.ir,
+  - DOMAIN-SUFFIX,zinofilm.ir,
+  - DOMAIN-SUFFIX,roozdl1.com,
   - DOMAIN-SUFFIX,mydiba.me,
   - DOMAIN-SUFFIX,asaldl.info,
   - DOMAIN-SUFFIX,halaldownload.com,
