--- a/tahrim.yaml
+++ b/tahrim.yaml
@@ -573,3 +573,29 @@ payload:
   - DOMAIN-SUFFIX,openai.com,
   - DOMAIN-SUFFIX,webex.com,
   - DOMAIN-SUFFIX,openembedded.org,
+  - DOMAIN-regxa.com,
+  - DOMAIN-jsdelivr.net,
+  - DOMAIN-jquery.com,
+  - DOMAIN-unpkg.com,
+  - DOMAIN-vscode-cdn.net,
+  - DOMAIN-auth0.com,
+  - DOMAIN-exp-tas.com,
+  - DOMAIN-msecnd.net,
+  - DOMAIN-cloudflare.com,
+  - DOMAIN-cs50.io,
+  - DOMAIN-cs50.ai,
+  - DOMAIN-cs50.me,
+  - DOMAIN-cs50.dev,
+  - DOMAIN-vscode.dev,
+  - DOMAIN-mouser.com,
+  - DOMAIN-deno.com,
+  - DOMAIN-kernel.org,
+  - DOMAIN-openembedded.or,
+  - DOMAIN-wix.com,
+  - DOMAIN-squarespace.com,
+  - DOMAIN-fastapi.tiangolo.com,
+  - DOMAIN-8xr.io,
+  - DOMAIN-litespeedtech.com,
+  - DOMAIN-buf.build,
+  - DOMAIN-pkg.jenkins.io,
+  - DOMAIN-downloads.arduino.cc,
