--- a/tahrim.yaml
+++ b/tahrim.yaml
@@ -573,29 +573,28 @@ payload:
   - DOMAIN-SUFFIX,openai.com,
   - DOMAIN-SUFFIX,webex.com,
   - DOMAIN-SUFFIX,openembedded.org,
-  - DOMAIN-regxa.com,
-  - DOMAIN-jsdelivr.net,
-  - DOMAIN-jquery.com,
-  - DOMAIN-unpkg.com,
-  - DOMAIN-vscode-cdn.net,
-  - DOMAIN-auth0.com,
-  - DOMAIN-exp-tas.com,
-  - DOMAIN-msecnd.net,
-  - DOMAIN-cloudflare.com,
-  - DOMAIN-cs50.io,
-  - DOMAIN-cs50.ai,
-  - DOMAIN-cs50.me,
-  - DOMAIN-cs50.dev,
-  - DOMAIN-vscode.dev,
-  - DOMAIN-mouser.com,
-  - DOMAIN-deno.com,
-  - DOMAIN-kernel.org,
-  - DOMAIN-openembedded.or,
-  - DOMAIN-wix.com,
-  - DOMAIN-squarespace.com,
-  - DOMAIN-fastapi.tiangolo.com,
-  - DOMAIN-8xr.io,
-  - DOMAIN-litespeedtech.com,
-  - DOMAIN-buf.build,
-  - DOMAIN-pkg.jenkins.io,
-  - DOMAIN-downloads.arduino.cc,
+  - DOMAIN-SUFFIX,regxa.com,
+  - DOMAIN-SUFFIX,jsdelivr.net,
+  - DOMAIN-SUFFIX,jquery.com,
+  - DOMAIN-SUFFIX,unpkg.com,
+  - DOMAIN-SUFFIX,vscode-cdn.net,
+  - DOMAIN-SUFFIX,auth0.com,
+  - DOMAIN-SUFFIX,exp-tas.com,
+  - DOMAIN-SUFFIX,msecnd.net,
+  - DOMAIN-SUFFIX,cs50.io,
+  - DOMAIN-SUFFIX,cs50.ai,
+  - DOMAIN-SUFFIX,cs50.me,
+  - DOMAIN-SUFFIX,cs50.dev,
+  - DOMAIN-SUFFIX,vscode.dev,
+  - DOMAIN-SUFFIX,mouser.com,
+  - DOMAIN-SUFFIX,deno.com,
+  - DOMAIN-SUFFIX,kernel.org,
+  - DOMAIN-SUFFIX,openembedded.or,
+  - DOMAIN-SUFFIX,wix.com,
+  - DOMAIN-SUFFIX,squarespace.com,
+  - DOMAIN-SUFFIX,fastapi.tiangolo.com,
+  - DOMAIN-SUFFIX,8xr.io,
+  - DOMAIN-SUFFIX,litespeedtech.com,
+  - DOMAIN-SUFFIX,buf.build,
+  - DOMAIN-SUFFIX,pkg.jenkins.io,
+  - DOMAIN-SUFFIX,downloads.arduino.cc,
