--- a/censor.yaml
+++ b/censor.yaml
@@ -112,3 +112,14 @@ payload:
   - DOMAIN-SUFFIX,mydiba.me,
   - DOMAIN-SUFFIX,asaldl.info,
   - DOMAIN-SUFFIX,halaldownload.com,
+  - DOMAIN-SUFFIX,hamtamovie.nl,
+  - DOMAIN-SUFFIX,filmekade.ir,
+  - DOMAIN-SUFFIX,hexdl.com,
+  - DOMAIN-SUFFIX,persianvid.com,
+  - DOMAIN-SUFFIX,clickfiles.ir,
+  - DOMAIN-SUFFIX,filmdoon.com,
+  - DOMAIN-SUFFIX,zaminmovie.com,
+  - DOMAIN-SUFFIX,danofilm.com,
+  - DOMAIN-SUFFIX,yoozmovie.com,
+  - DOMAIN-SUFFIX,upko.ir,
+  - DOMAIN-SUFFIX,filmzi.ir,
