--- a/steam.yaml
+++ b/steam.yaml
@@ -1,4 +1,37 @@
 payload:
+  - PROCESS-NAME,steam.exe,
+  - PROCESS-NAME,EpicGamesLauncher.exe,
+  - PROCESS-NAME,Brawlhalla.exe,
+  - PROCESS-NAME,Paladins.exe,
+  - PROCESS-NAME,Smite.exe,
+  - PROCESS-NAME,underlords.exe,
+  - PROCESS-NAME,WarRobots.exe,
+  - PROCESS-NAME,Among Us.exe,
+  - DOMAIN-KEYWORD,steam,
+  - DOMAIN-KEYWORD,epicgames,
+  - DOMAIN-KEYWORD,unrealengine,
+  - DOMAIN-KEYWORD,Paladins,
+  - DOMAIN-KEYWORD,Smite,
+  - DOMAIN-KEYWORD,Brawlhalla,
+  - DOMAIN-SUFFIX,app.launchdarkly.com,
+  - DOMAIN-SUFFIX,sentry.io,
+  - DOMAIN-SUFFIX,clientstream.launchdarkly.com,
+  - DOMAIN-SUFFIX,js.hcaptcha.com,
+  - DOMAIN-SUFFIX,newassets.hcaptcha.com,
+  - DOMAIN-SUFFIX,6b8b0d91-4a20-4a00-a3e4-4da4a883a5f0.client-api.unity3dusercontent.com,
+  - DOMAIN-SUFFIX,eos-general.s3.amazonaws.com,
+  - DOMAIN-SUFFIX,backend.innersloth.com,
+  - DOMAIN-SUFFIX,o770047.ingest.sentry.io,
+  - DOMAIN-SUFFIX,matchmaker-eu.among.us,
+  - DOMAIN-SUFFIX,matchmaker-as.among.us,
+  - PROCESS-NAME,Discord.exe,
+  - DOMAIN-KEYWORD,discord,
+  - DOMAIN-SUFFIX,airhorn.solutions,
+  - DOMAIN-SUFFIX,airhornbot.com,
+  - DOMAIN-SUFFIX,bigbeans.solutions,
+  - DOMAIN-SUFFIX,dis.gd,
+  - DOMAIN-SUFFIX,watchanimeattheoffice.com,
+  - DOMAIN-SUFFIX,hammerandchisel.ssl.zendesk.com.io,
   - DOMAIN-SUFFIX,steamcommunity.com,
   - DOMAIN-SUFFIX,steamgames.com,
   - DOMAIN-SUFFIX,steamusercontent.com,
