--- a/tahrim.yaml
+++ b/tahrim.yaml
@@ -632,3 +632,4 @@ payload:
   - DOMAIN-SUFFIX,cdn.oaistatic.com,
   - DOMAIN-SUFFIX,gemini.google.com,
   - DOMAIN-SUFFIX,oaistatic.com,
+  - DOMAIN-SUFFIX,grok.com,
