--- a/tahrim.yaml
+++ b/tahrim.yaml
@@ -5,6 +5,7 @@ payload:
   - PROCESS-NAME,UniGetUI.exe,
   - PROCESS-NAME,powershell.exe,
   - DOMAIN-SUFFIX,aistudio.google.com,
+  - DOMAIN-SUFFIX,deepmind.google,
   - DOMAIN-SUFFIX,slack.com,
   - DOMAIN-SUFFIX,oraclecloud.com,
   - DOMAIN-SUFFIX,solarwinds.com,
