--- a/DownloadManagers.yaml
+++ b/DownloadManagers.yaml
@@ -16,3 +16,10 @@ payload:
   - PROCESS-NAME,FlashGet.exe,
   - PROCESS-NAME,uGet.exe,
   - PROCESS-NAME,YouTubeDownloader.exe,
+  - PROCESS-NAME,video.downloader.videodownloadercom.dv.adm,
+  - PROCESS-NAME,com.streamdev.aiostreamer,
+  - PROCESS-NAME,com.leavjenn.m3u8downloader,
+  - PROCESS-NAME,com.streamdev.m3u8downloader,
+  - PROCESS-NAME,com.junkfood.seal.preview,
+  - PROCESS-NAME,com.myAllVideoBrowser,
+  - PROCESS-NAME,com.deniscerri.ytdl,
