--- a/game.yaml
+++ b/game.yaml
@@ -30,3 +30,13 @@ payload:
   - DOMAIN-SUFFIX,dis.gd,
   - DOMAIN-SUFFIX,watchanimeattheoffice.com,
   - DOMAIN-SUFFIX,hammerandchisel.ssl.zendesk.com.io,
+  - PROCESS-NAME,com.innersloth.spacemafia,
+  - PROCESS-NAME,air.com.ubisoft.brawl.halla.platform.fighting.action.pvp,
+  - PROCESS-NAME,com.ddup.zombiewaves.zw,
+  - PROCESS-NAME,com.valvesoftware.underlords,
+  - PROCESS-NAME,com.lightfoxgames.punchr,
+  - PROCESS-NAME,com.tencent.ig,
+  - PROCESS-NAME,com.gameloft.android.ANMP.GloftM5HM,
+  - PROCESS-NAME,com.epicgames.portal,
+  - PROCESS-NAME,com.Mediatonic.FallGuys_client,
+  - PROCESS-NAME,com.discord,
