--- a/steam.yaml
+++ b/steam.yaml
@@ -1,7 +1,6 @@
 payload:
   - PROCESS-NAME,steam.exe,
-  - PROCESS-NAME,com.valvesoftware.android.steam.community
-tv.twitch.android.app,
+  - PROCESS-NAME,com.valvesoftware.android.steam.community,
   - DOMAIN-KEYWORD,steam,
   - DOMAIN-SUFFIX,steamcommunity.com,
   - DOMAIN-SUFFIX,steamgames.com,
