--- a/windows.yaml
+++ b/windows.yaml
@@ -2,7 +2,6 @@ payload:
   - DOMAIN-SUFFIX,windowsupdate.microsoft.com,
   - DOMAIN-SUFFIX,windowsupdate.com,
   - DOMAIN-SUFFIX,update.microsoft.com,
-  - DOMAIN-SUFFIX,download.windowsupdate.com,
   - DOMAIN-SUFFIX,download.microsoft.com,
   - DOMAIN-SUFFIX,dl.delivery.mp.microsoft.com,
   - DOMAIN-SUFFIX,delivery.mp.microsoft.com,
@@ -25,7 +24,6 @@ payload:
   - DOMAIN-SUFFIX,oca.telemetry.microsoft.com,
   - DOMAIN-SUFFIX,aria.microsoft.com,
   - DOMAIN-SUFFIX,displaycatalog.mp.microsoft.com,
-  - DOMAIN-SUFFIX,ctldl.windowsupdate.com,
   - DOMAIN-SUFFIX,tsfe.trafficshaping.dsp.mp.microsoft.com,
   - DOMAIN-SUFFIX,prod.do.dsp.mp.microsoft.com,
   - DOMAIN-SUFFIX,definitionupdates.microsoft.com,
@@ -64,3 +62,15 @@ payload:
   - DOMAIN-SUFFIX,skypeassets.com,
   - DOMAIN-SUFFIX,skypeforbusiness.com,
   - DOMAIN-SUFFIX,microsoftstore.com,
+  - DOMAIN-SUFFIX,wns.windows.com,
+  - DOMAIN-SUFFIX,ws.microsoft.com,
+  - DOMAIN-SUFFIX,notify.windows.com.akadns.net,
+  - DOMAIN-SUFFIX,arc-apac.msn.com,
+  - DOMAIN-SUFFIX,md.mp.microsoft.com,
+  - DOMAIN-SUFFIX,fe2.update.microsoft.com.akadns.net,
+  - DOMAIN-SUFFIX,neu-displaycatalogrp.frontdoor.bigcatalog.commerce.microsoft.com,
+  - DOMAIN-SUFFIX,o-ring.msedge.net,
+  - DOMAIN-SUFFIX,sg2p.wns.notify.trafficmanager.net,
+  - DOMAIN-SUFFIX,skydrivesync.policies.live.net,
+  - DOMAIN-SUFFIX,spo-ring.msedge.net,
+  - DOMAIN-SUFFIX,statsfe2.update.microsoft.com.akadns.net,
